Pievienoju bg-5 CSS dokumentā un pievienoju aprakstus par DIV un SPAN; pievienoju foto ar div

--- a/css/stils.css
+++ b/css/stils.css
@@ -13,6 +13,10 @@ body {
     background-color: #474e5d; /* Dark Blue */
     color: #ffffff;
   }
+  .bg-5{
+      background-color: #aef3eb; /* Light blue */
+          color: #555555;
+  }
   .bg-3 { 
     background-color: #ffffff; /* White */
     color: #555555;
