--- a/css/stils.css
+++ b/css/stils.css
@@ -42,6 +42,7 @@ body {
     padding-bottom: 70px;
   }
   .navbar {
+    background-color: #f5f6f7;
     padding-top: 15px;
     padding-bottom: 15px;
     border: 0;
